Add release info to posts

--- a/_posts/2017-02-24-puhis.md
+++ b/_posts/2017-02-24-puhis.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Puhis pukahtaa"
 date:   2017-01-24 23:39:46 +0200
 categories: hallituspalsta
+magazine: 1/2017
 image: "/static/2017-02/kyykka-onni.jpg"
 caption: Väsynyt GT-toimittaja kilpailun erätauolla
 author: Titta Saari
