--- a/_posts/2017-02-24-kyykka.md
+++ b/_posts/2017-02-24-kyykka.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Akateemisen Kyykän MM-kilpailut - do's and don'ts"
 date:   2017-01-24 23:39:46 +0200
 categories: kippari
+magazine: 1/2017
 image: "/static/2017-02/kyykka-onni.jpg"
 caption: Väsynyt GT-toimittaja kilpailun erätauolla
 author: Herra Luntinen ja kuolemattomat kivespussit
