--- a/_posts/2017-02-24-puhis.md
+++ b/_posts/2017-02-24-puhis.md
@@ -5,7 +5,7 @@ date:   2017-01-24 23:39:46 +0200
 categories: hallituspalsta
 magazine: 1/2017
 print_order: 3
-caption: Väsynyt GT-toimittaja kilpailun erätauolla
+image: "/static/2017-02/puhis.jpg"
 author: Titta Saari
 ingress: Vuonna 2017 Kultaisen tomaatin perinteinen Puhiksen puhinat on hallituspalsta. Ensimmäisessä osassa ääneen pääsee killan puheenjohtaja Titta Saari.
 ---
