Add minor updates to posts

--- a/_posts/2016-12-31-guld-igen.md
+++ b/_posts/2016-12-31-guld-igen.md
@@ -19,8 +19,9 @@ Nollas numero antaa hyvää esimakua siitä, mitä vuoden paperilehdet tuovat tu
 Parahinta uutta vuotta ja hyviä lukuhetkiä toivottaen
 
 Juuso Mikkonen
+
 Kultainen päätoimittaja
 
 
-PS. Päätoimittajahakemuksessa lupaamani yhden (1) oluen palkkio pääkirjoituksesta löytyvästä kirjoitus- tai kielioppivirheestä on nyt voimassa.
+*PS. Päätoimittajahakemuksessa lupaamani yhden (1) oluen palkkio pääkirjoituksesta löytyvästä kirjoitus- tai kielioppivirheestä on nyt voimassa.*
 
