--- a/_posts/wappu17/2017-04-01-29.md
+++ b/_posts/wappu17/2017-04-01-29.md
@@ -1,8 +1,10 @@
 ---
-layout: post
+layout: wappu17-post
 title:  "Luukku 29"
 date:   2016-12-31 23:39:46 +0200
 categories: wappu17
 number: 29
 author: Juuso Mikkonen
 ---
+
+top wappu
