Update post templates for calendar

--- a/_posts/wappu17/2017-04-01-17.md
+++ b/_posts/wappu17/2017-04-01-17.md
@@ -1,8 +1,51 @@
 ---
-layout: post
-title:  "Luukku 17"
+layout: wappu17-post
+title:  "Wappupääkirjoitus"
 date:   2016-12-31 23:39:46 +0200
 categories: wappu17
 number: 17
+calendar: 7
 author: Juuso Mikkonen
+featured: 10
+image: /static/2017-rankka/juuso.jpg
 ---
+
+Hyvä GT:n lukija! Onnittelut, olet selvinnyt yhdestä pitkästä vuodesta ja jälleen kerran Wappu häämöttää. Päätoimittajan syntymäpäivä, killan vuosijuhla ja Mylvarin sheivaus saapuvat joka syksy, mutta Wappu on vain kerran vuodessa! Nyt on lupa nauttia täysin rinnoin.
+
+Wapun mediakenttä on ollut jo pitkän aikaa hyvin kilpailtu. Mitä moninaisemmat lehdet, radiokanavat ja mobiilisovellukset kilpailevat juhlijan huomiosta hörppyjen välissä (liitteenä GT:n wappuanalyytikko J. Mikkosen koostama analyysi kilpailutilanteesta). Tästä huolimatta Kultainen Tomaatti on lähtenyt valloittamaan tätä viimeistä korpimaata Wappukalenterin muodossa.
+
+Ensimmäisessä luukussa vastaava päätoimittaja hoitaa pakolliset virallisuudet alta pois ja jo huomenna toimitus pääsee täyteen vauhtiinsa. Luvassa on upeita ja unohtumattomia luukkuja, älä missaa päivääkään!
+
+<br>
+
+Ulliksella tavataan
+
+Juuso “Säätävä Takatukka-Jallu” Mikkonen
+
+Wappupäätoimittaja
+
+<br>
+
+*Liite 1: Q2/2017 quarterly matrix analysis of the Wappu media segment in Southern Finland market. Property of Golden Tomato Management Consulting ltd. (subsidiary of GT Media Inc). Produced by Juuso Mikkonen, Senior Wappu analyst, Department of Wappu innovation and services research.*
+
+<div class="fourfold clearfix">
+    <div class="fourfold__row">
+        <div class="fourfold__cell">Voi käyttää kärpäslätkänä</div>
+        <div class="fourfold__cell">GT:n wappukalenteri *</div>
+        <div class="fourfold__cell">Äpy **</div>
+    </div>
+    <div class="fourfold__row">
+        <div class="fourfold__cell">Ei voi käyttää kärpäslätkänä</div>
+        <div class="fourfold__cell">Whappu-app</div>
+        <div class="fourfold__cell">Radiodiodi</div>
+    </div>
+    <div class="fourfold__row">
+        <div class="fourfold__cell"></div>
+        <div class="fourfold__cell">AS pilasi tämäkin</div>
+        <div class="fourfold__cell">Ei pilannut (vielä)</div>
+    </div>
+</div>
+
+\* Tulostusohjeita voi tiedustella toimitukselta
+
+\** Analyytikon ennuste
