--- a/_posts/wappu17/2017-04-01-29.md
+++ b/_posts/wappu17/2017-04-01-29.md
@@ -4,7 +4,7 @@ title:  "Luukku 29"
 date:   2016-12-31 23:39:46 +0200
 categories: wappu17
 number: 29
+calendar: 8
+no_frontpage: true
 author: Juuso Mikkonen
 ---
-
-top wappu
