--- a/_posts/wappu17/2017-04-01-1.md
+++ b/_posts/wappu17/2017-04-01-1.md
@@ -3,6 +3,8 @@ layout: post
 title:  "Luukku 1"
 date:   2016-12-31 23:39:46 +0200
 categories: wappu17
-number: 1
+number: 1.5.
+calendar: 5
+no_frontpage: true
 author: Juuso Mikkonen
 ---
