--- a/_posts/wappu17/2017-04-01-19.md
+++ b/_posts/wappu17/2017-04-01-19.md
@@ -4,5 +4,7 @@ title:  "Luukku 19"
 date:   2016-12-31 23:39:46 +0200
 categories: wappu17
 number: 19
+calendar: 1
+no_frontpage: true
 author: Juuso Mikkonen
 ---
