--- a/_posts/wappu17/2017-04-01-22.md
+++ b/_posts/wappu17/2017-04-01-22.md
@@ -4,5 +4,7 @@ title:  "Luukku 22"
 date:   2016-12-31 23:39:46 +0200
 categories: wappu17
 number: 22
+calendar: 5
+no_frontpage: true
 author: Juuso Mikkonen
 ---
