--- a/_posts/wappu17/2017-04-01-26.md
+++ b/_posts/wappu17/2017-04-01-26.md
@@ -4,5 +4,7 @@ title:  "Luukku 26"
 date:   2016-12-31 23:39:46 +0200
 categories: wappu17
 number: 26
+calendar: 9
+no_frontpage: true
 author: Juuso Mikkonen
 ---
