--- a/_posts/wappu17/2017-04-01-30.md
+++ b/_posts/wappu17/2017-04-01-30.md
@@ -4,5 +4,7 @@ title:  "Luukku 30"
 date:   2016-12-31 23:39:46 +0200
 categories: wappu17
 number: 30
+calendar: 4
+no_frontpage: true
 author: Juuso Mikkonen
 ---
