--- a/_posts/wappu17/2017-04-01-19.md
+++ b/_posts/wappu17/2017-04-01-19.md
@@ -7,7 +7,7 @@ number: 19
 calendar: 1
 no_frontpage: true
 author: Kaisa Hynynen
-ingress: "Wappukalenterin kolmannessa luukussa Kultanen toimitus ulkoistaa hauskuutuksen yleisölle. Nyt on hyvä tilaisuus saada oma puujalka lehden sivuille!"
+ingress: "Wappukalenterin kolmannessa luukussa Kultainen toimitus ulkoistaa hauskuutuksen yleisölle. Nyt on hyvä tilaisuus saada oma puujalka lehden sivuille!"
 ---
 
 <iframe
@@ -15,3 +15,5 @@ ingress: "Wappukalenterin kolmannessa luukussa Kultanen toimitus ulkoistaa hausk
   scrolling="no"
   style="width:100%;border:none;height:900px"
 ></iframe>
+
+*Päivitetty 19.4.2017: Korjattu lukijan huomaama typo*
