--- a/_posts/wappu17/2017-04-01-21.md
+++ b/_posts/wappu17/2017-04-01-21.md
@@ -1,10 +1,18 @@
 ---
 layout: post
-title:  "Luukku 21"
+title:  "Eversti Sandels esittää: HAUSKAA"
 date:   2016-12-31 23:39:46 +0200
 categories: wappu17
 number: 21
 calendar: 3
 no_frontpage: true
-author: Juuso Mikkonen
+author: Santeri Salmijärvi
 ---
+
+![asdsad](/static/2017-wappu/wasabi.jpg)
+
+_Dragon Ball on Akira Toriyaman kynästä syntynyt ja vuosina 1984-1995 julkaistu mangasarja, joka lukeutuu lajityyppinsä nimekkäimpiin teoksiin. Lännessä tunnetaan etenkin luvusta 195 alkava animeadaptaatio Dragon Ball Z ja sen vihannesten mukaan nimetyt sayan-hahmot. Sarjan päähenkilö Goku kohtaa heti alkumetreillä lajikumppaninsa Raditzin tuhoisin seurauksin. Taattuun battle shonen -tyyliin tarinan edetessä ilmenee Raditzin huomattavan heikko voimataso suhteessa muihin sayan-sotureihin. Erinomaisessa DBZ Abridged -uudelleendubbauksessa Vegeta ilmoittaakin voimatasoja käyttäen yksikkönä Raditzia._
+
+_Wasabi on mm. Japanissa luonnonvaraisesti jokien rannoilla esiintyvä kaalin ja sinapin sukuinen kasvi. Japanilaisessa keittiössä se on keskeisessä roolissa ja wasabitahna onkin rantautunut myös länteen osana japanilaista ruokakulttuuria._
+
+_Vitsi on "hauska", koska wasabi tunnetaan lontoon murteella myös nimellä_ **Japanese horseradish**. _Kuva on taiteilijan näkemys hevosmuotoisesta Raditzista, mikä on ilmeistä tälle tyypillisestä harjatyylistä ja scouterista. Olkaatten hyvät, mikäli opitte jotain uutta. Näytän itseni ulos ->_
