--- a/_posts/wappu17/2017-04-01-27.md
+++ b/_posts/wappu17/2017-04-01-27.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: wappu17-post
 title:  "Git- ja Vim-temput vapun hätähousuiluun"
 date:   2017-04-27 00:00:30 +0300
 categories: wappu17
