--- a/_posts/wappu17/2017-04-01-26.md
+++ b/_posts/wappu17/2017-04-01-26.md
@@ -10,12 +10,15 @@ author: Kaisa Hynynen
 ingress: Wabediwabs ja swibediswabedi! Toimitus katsoi tulevaisuuteen, tutki planeettojen asentoja ja selvitti, mitä eri horoskooppimerkkien edustajille Wappuna tapahtuukaan! Ihme hommia!
 ---
 
-### OINAS (21.3. - 19.4.)
+![](/static/2017-wappu/horoskooppi/1.jpg)
 
+### OINAS (21.3. - 19.4.)
 Oinas on tehokkuuden ystävä. Oinas tarvitsee Wapun viettoon vai kaksi päivää. Näiden kahden päivän aikana Oinas vetää sima-, tippaleipä- ja perunasalaattiöverit. Oinas valvoo 48 tuntia Hullusta Jussista Ullikseen. Tässä välissä Oinas kuitenkin ottaa tunnin powernapit Ulliksella. Tehokkuus on hauskaa!
 
 ### HÄRKÄ (20.4. - 20.5.)
 Härkä on löytänyt vuosituhannen wappuheilan! Tästä löydöstä kannattaa pitää kiinni ja dumpata vasta helluntain jälkeen, jotta heilaonni jatkuu vielä kesällä.
+
+![](/static/2017-wappu/horoskooppi/2.jpg)
 
 ### KAKSONEN (21.5. - 21.6.)
 Kaksonen viettää Wappua neljä viikkoa putkeen vailla mitään huolia. Huhtikuu on ollut ja tulee olemaan täyttä tykitystä. Kannattaa kuitenkin varoa toukokuun toista päivää, jolloin vastuu alkaa taas painaa.
@@ -23,11 +26,15 @@ Kaksonen viettää Wappua neljä viikkoa putkeen vailla mitään huolia. Huhtiku
 ### RAPU (22.6. - 22.7.)
 Kyllähän sen jo sanomattakin tietää, miten ravun Wappu sujuu. Rapu rapu rallaa.
 
+![](/static/2017-wappu/horoskooppi/3.jpg)
+
 ### LEIJONA (23.7. - 22.8.)
 Jellona vetelee viimeisiään. Vuosi on ollut raskas, mutta Wapun sulosävelet vielä pitävät sinut pystyssä. Toukokuun toisena päivänä jellona vaipuu kesähorrokseen.
 
 ### NEITSYT (23.8. - 22.9.)
 Olet elosi kukoistuksessa! Wappu virtaa suonissa ja elämää on yhtä riemuvoittoa! Olet jopa löytänyt ihanan heilan kainaloosi ja suunnitteletkin jo tulevia häitänne. Heilasi on härkä ja liittonne on takuuvarmasti kestävä.
+
+![](/static/2017-wappu/horoskooppi/4.jpg)
 
 ### VAAKA (23.9. - 22.10.)
 Vaaka on vuodenvaihteesta asti valmistautunut Wappuun. Hän on reenannut Wappua varten jo pitkään, jotta kisakunto on parhaimmillaan juurikin Wapun aikaan. Vaaka Wappua reenaa Wappuareenaa(lla).
@@ -35,11 +42,15 @@ Vaaka on vuodenvaihteesta asti valmistautunut Wappuun. Hän on reenannut Wappua 
 ### SKORPIONI (23.10. - 21.11.)
 Wappu on skorpionille suurien muutosten aikaa. Heräät taas henkiin puolen vuoden mittaisesta horroksesta ja elät täysin rinnoin. Perustat super menestyksekkään startupin, joka myy käytettyjä kultakaloja.
 
+![](/static/2017-wappu/horoskooppi/5.jpg)
+
 ### JOUSIMIES (22.11. - 21.12.)
 Jousimies on vihdoin saanut kandinsa valmiiksi ja nyt aukeaa pullo jos toinenkin! Kannattaa kuitenkin varoa, ettei kohmelo pääse yllättämään.
 
 ### KAURIS (22.12. - 19.1.)
 Kauriin Wapussa tärkeintä on vahva somepresenssi. Kauris onkin spämminyt Whappu-appia oikein toden teolla ja sama meno jatkuu myös muissa Kauriille tärkeissä kanavissa.
+
+![](/static/2017-wappu/horoskooppi/6.jpg)
 
 ### VESIMIES (20.1. - 18.2.)
 Vesimiehen Wappu on yhtä railakas kuin 50-vuotis hääpäivä. Sää on kuin morsian, silloin 50-vuotta sitten ja seura yhtä kylmää kuin kuluneet 50 vuotta. Mutta ei hätää, voit aina tukeutua ystävään, jonka kyljessä lukee “Koskenkorva”.
