--- a/_posts/wappu17/2017-04-01-28.md
+++ b/_posts/wappu17/2017-04-01-28.md
@@ -19,7 +19,7 @@ Tämä upea raha kuvastaa sitä suhdetta mikä AS:laisellä on tekniikkaan ja he
 ![Mene miinaan](/static/2017-wappu/raha2.png)
 
 ### Mene miinaan
-Mene miinaan juhlaraha palauttaa nöyränä mieliimme ne killistien kauhunhetket joita jokainen perjantai-illan kimble on pullollaa bufferin ollessa kymmenen kaljaa ja miinassa odottamassa tripla sinun upeaa quatroasi. Tämä peri AS:lainen juhlaraha tuskin muita selittelyjä kaipaa.
+Mene miinaan juhlaraha palauttaa nöyränä mieliimme ne killistien kauhunhetket joita jokainen perjantai-illan kimble on pullollaan bufferin ollessa kymmenen kaljaa ja miinassa odottamassa tripla sinun upeaa quatroasi. Tämä peri AS:lainen juhlaraha tuskin muita selittelyjä kaipaa.
 
 ![Mylvarikollinen](/static/2017-wappu/raha3.png)
 
