Update latest post metadata

--- a/_posts/wappu17/2017-04-01-30.md
+++ b/_posts/wappu17/2017-04-01-30.md
@@ -5,18 +5,17 @@ date:   2017-04-30 00:00:05 +0300
 categories: wappu17
 number: 30
 calendar: 4
-no_frontpage: true
+no_frontpage: false
 author: Aku Viitanen
+featured: 1000
 ingress: Oletko viettänyt kevään babylonian rattaissa tai muuten unohtanut seurata kalenterin kulkua? Pääsikö wappu, kaikesta toitotuksestaan huolimatta yllättämään? Ei hätää, sillä wappu on loppujen lopuksi mielentila (eikä onneksi säätila) ja itse juhlapäiviin kerkeää vielä valmistautua vallan mainiosti. Alla kolme vinkkiä miten kerkeät vielä wappuveturin kyytin, eikä tarvitse saapua resiinalla perästä.
+image: /static/2017-wappu/www/merkit.jpg
+caption: Jos tilanne on päässyt näin pahaksi, kannattaa miettiä jos ensi vuonna hommat hoitaisi ajoissa.
 ---
 
 ### 1. Haalarit kuntoon
 
 Sait jo tämän vuoden Äpy-merkkisi ja tajuat, että Julkkumerkkikin on vielä taskun pohjalla. Merkkibufferin tyhjentämiseen ei ikävä kyllä ole taianomaista ratkaisua, eli neula ja lanka kauniiseen käteen jo aamusta. Käytä kahta nuppineulaa apuna, jotta merkit pysyvät paikallaan. Jos käytettävissä on ompelukone, käytä sitä. Muista olla varovainen minkä kankaan läpi neulot, koska mikään ei ole mukavampi yllätys kuin huomata että olet ommellut molemmat jalat ja kaikki taskut umpeen. Jos tilanne on kuitenkin toivoton, saa lähimmästä askartelupaskartelukaupasta erikeeperiä, jolla merkit saa pysymään wapun yli.
-
-![Merkit](/static/2017-wappu/www/merkit.jpg)
-
-*Jos tilanne on päässyt näin pahaksi, kannattaa miettiä jos ensi vuonna hommat hoitaisi ajoissa.*
 
 ### 2. Kouluhommat valmiiksi
 
