Add final wappu post

--- a/_posts/wappu17/2017-04-01-1.md
+++ b/_posts/wappu17/2017-04-01-1.md
@@ -1,10 +1,41 @@
 ---
-layout: post
-title:  "Luukku 1"
+layout: wappu17-post
+title:  "Walpurin ajan pää(tös)kirjoitus"
 date:   2016-12-31 23:39:46 +0200
 categories: wappu17
 number: 1.5.
 calendar: 5
-no_frontpage: true
+no_frontpage: false
 author: Juuso Mikkonen
+ingress: Viimeisessä luukussa päätoimittaja heittäytyy haikeaksi. Jos sul lysti on niin kanna Juuso ulos!
+image: "/static/2017-wappu/wabu.jpg"
+caption: "Alkuperäinen kuva: Ville Harmaala. Editointi: ei oo shopattu t. PTJ"
 ---
+
+*"Meniks ekalla vai otetaanko uusiks?"*
+
+Huh, se oli siinä. Wapun aika on jälleen kääntymässä päätökseensä ja lopussa ovat myös juhlijat, ainakin päätoimittajan havainnoinnin perusteella. Jälleen yhdestä vuosikerrasta phukseja saatiin tehtyä kelpo teekkareita ja koko Otaniemi pääsi nauttimaan niin hanhista, raekuuroista kuin Mikko Alatalon musiikistakin. Varmoja wapun merkkejä kaikki.
+
+Tämä wappu tulee jäämään allekirjoittaneen mieleen ainutlaatuisena monestakin syystä. Jos mietitään, miltä Wappu 17 kuulostaa, on vastaus selvä – #fäijöniwappu oli nimensä veroinen. Tätä rallia ei wapun jälkeen tarvitsekaan hetkeen kuunnella.
+
+GT:n (pää)toimittaminen wapun yli oli myös kokemus, jonka tulen muistamaan pitkään. Ajatus wappukalenterista heräsi ehkä viikko tai pari ennen aloittamista ja kiittäminen sen toteutumisesta menee koko toimitukselle. Julkaisuprosessia emme ehtineet tänä kiireisenä aikana hioa loppuun asti, minkä takia päätoimittaja julkaisi luukkuja niin hotellihuoneesta Amsterdamissa kuin tärisevin käsin omasta kämpästään aamuneljän aikoihin. Tästä huolimatta jokainen luukku aukesi – yleensä ajallaan ja silloin kun ei, hoitaa päätoimittaja skumpat toimitukselle!
+
+Kultainen toimitus piipahti wapun aikaan myös Radiodiodin taajuuksilla. Toimituksella oli radiossa kivaa (*oliko yleisöllä?*), vaikka kahdeksaksi Diodin konteille raahautuminen tekikin pahaa. Ehkä GT palaa ääneen vielä ensikin vuonna.
+
+Mikä tahansa asia on mukava lopettaa johonkin positiiviseen (poislukien sukupuolitautitestit), joten tarjoilen loppuun vielä pitkään säilömäni vitsin, joka on *melkoisen hyvä*, vaikka itse sanonkin. Tähän onkin hyvä lopettaa. Hauskaa wappua vielä kerran!
+
+
+<br>
+
+*Mies säästi ruuasta syömällä vain kaveriensa pizzojen reunat. Hänen mottonsa oli "living on the edge".*
+
+
+<br>
+
+
+
+Wappu on mielentila
+
+Juuso Mikkonen
+
+Päätoimittaja
