Fix typo in category name

--- a/_posts/2017-05-13-carcass-1.md
+++ b/_posts/2017-05-13-carcass-1.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Death metalin kolme vuosikymmentä: Carcass, osa 1"
 date:   2017-05-13 01:00:00 +0200
-categories: levyarvostely
+categories: levyarvostelu
 author: Juho Lindholm
 ---
 
