Update featured stories

--- a/_posts/3-17/2017-09-28-jodel.md
+++ b/_posts/3-17/2017-09-28-jodel.md
@@ -7,6 +7,7 @@ author: Kaisa Hynynen
 ingress: Keskustelusovellus Jodel on viimeisen vuoden aikana vallannut myös Otaniemen kampuksen ja valloittanut Aallon opiskelijat. Keräsimme kokoon parhaat Jodel-vinkit, jotta jokainen opiskelija, sekä uusi että vanha, saa kaiken irti tästä mobiiliviestinnän lahjasta maailmalle.
 magazine: 4/2017
 print_order: 7
+featured: 5
 ---
 
 Jodel on korkeakouluopiskelijoille suunnattu anonyymi keskustelusovellus. Sovellus on kehitetty Saksassa 2014 ja Suomessa se saavutti suurempaa suosiota syksyllä 2016. Jodel näyttää viestit eli jodlaukset ainoastaan 10 kilometrin säteellä ja sovelluksesta löytyy keskustelukanavat aivan kaikelle. Siis 4real, _ihan_ KAIKELLE. 
