Update configuration for new magazine release

--- a/_posts/4-17/2017-10-31-gnu-emacs.md
+++ b/_posts/4-17/2017-10-31-gnu-emacs.md
@@ -6,6 +6,7 @@ categories: gt_testaa
 author: Konsta Hölttä, Onni Lampi
 ingress: Maailmankuulun ammoisen tekstieditorisodan se kevyempi puoli on toimituksenkin suosiossa. Tämän universaalin sodan sääntöihin kuuluu, että vastapuolta tulee mollata aina tilanteen tullessa. Sekä sodassa että rakkaudessa vihollisen tunteminen viisastaa -- GT päätti kerrankin asentaa valtavan tekstieditorihirviön ja ottaa selvää, miten äkkiä sormet alkavat oireilla ja kuinka pahasti näppäimistön kaikki modifier-napit alkavat kulua puhki.
 magazine: 5/2017
+print_order: 7
 image: /static/2017-04/emacs/emacs-old-logo.png
 ---
 Huom. ei kehdattu laittaa kaikkia sivuja paperille taittajan hermojen ja toimitusbudun säästämiseksi. Tässä kokopitkä tutkielma, kun paperilla oli vaan tiivistelmä.
