--- a/_posts/4-17/2017-10-31-gnu-emacs.md
+++ b/_posts/4-17/2017-10-31-gnu-emacs.md
@@ -279,7 +279,7 @@ Kun toimitus kysyi eräältä Emacsissa elävältä guru-ukkelilta että mistäs
 
 Se, mitä tekstieditoria kukin tai itse käyttää, on joillekin uskon asia ja joillekin vain kuin kenkien tai kalsareiden sovittaminen -- on monia hyviä ja valinta tehdään ihan perstuntumalta. GT ei ota kantaa minkä muotoinen täytyy olla käyttääkseen tälläistä tekstieditori-käyttöjärjestelmä-abominaatiota (ok, oikeasti se on hieno Lisp-ympäristö jota yleensä käytetään editorina) jonka pohjimmaiset ajatukset ovat oikeastaan aivan mainioita; kukin harrastelkoon kaikkea koodieditoinnista seksiin ihan miten tykkää (kunhan uskonto ei esim. aja kansanmurhaan). Emacs on testaajien mielestä ihan hyvä idea; on harmi, että tekstin editointi on vähän kömpelöä ilman polkimia, mutta kuulemma Evil-mode tai Spacemacs eli Emacs tunkattuna enemmän Vimiksi helpottaisi. Täytynee jälleen suorittaa testausta.
 
-## Lähteet (todo: renumber reorder)
+## Lähteet
 
 [^00]: <http://aalto-mark-rippetoe-society.herokuapp.com/natiivia.txt>
 [^01]: <https://www.amazon.com/s?field-keywords=pc+usb+foot+switch>
